Fix expanded log collapsing issue

--- a/src/app/components/common/common.component.css
+++ b/src/app/components/common/common.component.css
@@ -95,8 +95,9 @@ html,body {
 }
 
 .logo-horizontal {
-  width: 90%;
-  height: 68px;
+  width: 85%;
+  height: 50px;
+  margin-top: 9px;
 }
 
 .title {
